--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+
+  background-image: url("http://www.powerpointhintergrund.com/uploads/ocean-underwater-wallpaper-hd-24.jpeg");
+  background-size: cover;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -21,7 +24,12 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  background-image: url("http://pngimg.com/uploads/dolphin/dolphin_PNG9132.png");
+  height:243px;
+  width: 373px;
+  /*border:05px solid red;*/
+
+  /*border-radius:1px;*/
   position:absolute;
 }
+
